[gd_scene load_steps=2 format=3 uid="uid://ct0syn32mxtou"]

[ext_resource type="Script" path="res://Scripts/OptionsBar.gd" id="1_wju5t"]

[node name="OptionsBar" type="PanelContainer" node_paths=PackedStringArray("x_coords", "y_coords", "horizontal_gap", "vertical_gap", "horizontal_offset", "vertical_offset")]
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wju5t")
x_coords = NodePath("OptionsScrollContainer/OptionsContainer/XCoordsContainer/XCoords")
y_coords = NodePath("OptionsScrollContainer/OptionsContainer/YCoordsContainer/YCoords")
horizontal_gap = NodePath("OptionsScrollContainer/OptionsContainer/HorizontalGridDistanceContainer/XGridDistance")
vertical_gap = NodePath("OptionsScrollContainer/OptionsContainer/VerticalGridDistanceContainer/YGridDistance")
horizontal_offset = NodePath("OptionsScrollContainer/OptionsContainer/AxisHorizontalOffsetContainer/AxisHorizontalOffset")
vertical_offset = NodePath("OptionsScrollContainer/OptionsContainer/AxisVerticalOffsetContainer/AxisVerticalOffset")

[node name="OptionsScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
mouse_filter = 0

[node name="OptionsContainer" type="VBoxContainer" parent="OptionsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2
text = "Graph"
horizontal_alignment = 1

[node name="XCoordsContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="XCoordsLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/XCoordsContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "X:"

[node name="XCoords" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/XCoordsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0

[node name="YCoordsContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="YCoordsLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/YCoordsContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y:"

[node name="YCoords" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/YCoordsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0

[node name="GraphThickness" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="GraphThicknessLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/GraphThickness"]
layout_mode = 2
size_flags_horizontal = 0
text = "Thickness"

[node name="GraphThickness" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/GraphThickness"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -1.0
max_value = 10000.0
value = 2.0

[node name="ColorContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/ColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="OptionsScrollContainer/OptionsContainer/ColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "-"

[node name="GridLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2
text = "Grid"
horizontal_alignment = 1

[node name="GapSizeLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2
text = "Gap Size"
horizontal_alignment = 1

[node name="HorizontalGridDistanceContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="XGridDistanceLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/HorizontalGridDistanceContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "X:"

[node name="XGridDistance" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/HorizontalGridDistanceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0
value = 50.0

[node name="VerticalGridDistanceContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="YGridDistanceLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/VerticalGridDistanceContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y:"

[node name="YGridDistance" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/VerticalGridDistanceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0
value = 50.0

[node name="GridThickness" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="GridThicknessLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/GridThickness"]
layout_mode = 2
size_flags_horizontal = 0
text = "Thickness"

[node name="GridThickness" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/GridThickness"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -1.0
max_value = 10000.0
value = 2.0

[node name="HorizontalGridColorContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/HorizontalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "X Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="OptionsScrollContainer/OptionsContainer/HorizontalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "-"

[node name="VerticalGridColorContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/VerticalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="OptionsScrollContainer/OptionsContainer/VerticalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "-"

[node name="GridHorizontalEnabled" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="EnabledLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/GridHorizontalEnabled"]
layout_mode = 2
size_flags_horizontal = 0
text = "X Enabled"

[node name="EnabledButton" type="CheckButton" parent="OptionsScrollContainer/OptionsContainer/GridHorizontalEnabled"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
button_pressed = true

[node name="GridVerticalEnabled" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="EnabledLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/GridVerticalEnabled"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y Enabled"

[node name="EnabledButton" type="CheckButton" parent="OptionsScrollContainer/OptionsContainer/GridVerticalEnabled"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
button_pressed = true

[node name="AxisLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2
text = "Axis"
horizontal_alignment = 1

[node name="OffsetLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2
text = "Offset:"
horizontal_alignment = 1

[node name="AxisHorizontalOffsetContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="AxisHorizontalOffsetLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisHorizontalOffsetContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "X:"

[node name="AxisHorizontalOffset" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/AxisHorizontalOffsetContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0

[node name="AxisVerticalOffsetContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="AxisVerticalOffsetLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisVerticalOffsetContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y:"

[node name="AxisVerticalOffset" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/AxisVerticalOffsetContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0

[node name="AxisThicknessContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="AxisThicknessLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisThicknessContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Thickness"

[node name="AxisThickness" type="SpinBox" parent="OptionsScrollContainer/OptionsContainer/AxisThicknessContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -1.0
max_value = 10000.0
value = 2.0

[node name="AxisHorizontalGridColorContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisHorizontalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "X Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="OptionsScrollContainer/OptionsContainer/AxisHorizontalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "-"

[node name="AxisVerticalGridColorContainer" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisVerticalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="OptionsScrollContainer/OptionsContainer/AxisVerticalGridColorContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "-"

[node name="AxisHorizontalEnabled" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="EnabledLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisHorizontalEnabled"]
layout_mode = 2
size_flags_horizontal = 0
text = "X Enabled"

[node name="EnabledButton" type="CheckButton" parent="OptionsScrollContainer/OptionsContainer/AxisHorizontalEnabled"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
button_pressed = true

[node name="AxisVerticalEnabled" type="HBoxContainer" parent="OptionsScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="EnabledLabel" type="Label" parent="OptionsScrollContainer/OptionsContainer/AxisVerticalEnabled"]
layout_mode = 2
size_flags_horizontal = 0
text = "Y Enabled"

[node name="EnabledButton" type="CheckButton" parent="OptionsScrollContainer/OptionsContainer/AxisVerticalEnabled"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
button_pressed = true

[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/XCoordsContainer/XCoords" to="." method="coordinates_updated" unbinds=1]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/YCoordsContainer/YCoords" to="." method="coordinates_updated" unbinds=1]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/GraphThickness/GraphThickness" to="." method="graph_thickness_updated"]
[connection signal="color_changed" from="OptionsScrollContainer/OptionsContainer/ColorContainer/ColorPicker" to="." method="graph_color_updated"]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/HorizontalGridDistanceContainer/XGridDistance" to="." method="grid_gap_updated" unbinds=1]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/VerticalGridDistanceContainer/YGridDistance" to="." method="grid_gap_updated" unbinds=1]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/GridThickness/GridThickness" to="." method="grid_thickness_updated"]
[connection signal="color_changed" from="OptionsScrollContainer/OptionsContainer/HorizontalGridColorContainer/ColorPicker" to="." method="horizontal_grid_color_updated"]
[connection signal="color_changed" from="OptionsScrollContainer/OptionsContainer/VerticalGridColorContainer/ColorPicker" to="." method="vertical_grid_color_updated"]
[connection signal="toggled" from="OptionsScrollContainer/OptionsContainer/GridHorizontalEnabled/EnabledButton" to="." method="horizontal_grid_enabled"]
[connection signal="toggled" from="OptionsScrollContainer/OptionsContainer/GridVerticalEnabled/EnabledButton" to="." method="vertical_grid_enabled"]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/AxisHorizontalOffsetContainer/AxisHorizontalOffset" to="." method="axis_gap_updated" unbinds=1]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/AxisVerticalOffsetContainer/AxisVerticalOffset" to="." method="axis_gap_updated" unbinds=1]
[connection signal="value_changed" from="OptionsScrollContainer/OptionsContainer/AxisThicknessContainer/AxisThickness" to="." method="axis_thickness_updated"]
[connection signal="color_changed" from="OptionsScrollContainer/OptionsContainer/AxisHorizontalGridColorContainer/ColorPicker" to="." method="horizontal_axis_color_updated"]
[connection signal="color_changed" from="OptionsScrollContainer/OptionsContainer/AxisVerticalGridColorContainer/ColorPicker" to="." method="vertical_axis_color_updated"]
[connection signal="toggled" from="OptionsScrollContainer/OptionsContainer/AxisHorizontalEnabled/EnabledButton" to="." method="horizontal_axis_enabled"]
[connection signal="toggled" from="OptionsScrollContainer/OptionsContainer/AxisVerticalEnabled/EnabledButton" to="." method="vertical_axis_enabled"]
